Reworked Axivity and CSV processor base class